--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="shortcut icon" href="CodeCrafters-Guild.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>Code Crafters Guild</title>
 </head>
 <body>
-    <h1>Code Crafters Guild</h1>
+    <div class="first-bg" style="background-image: url();" id="grad1">
+
+        <header class="text-gray-600 body-font">
+            <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+                <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
+                    <img src="CodeCrafters-Guild.png" alt="logo" class="w-12">
+                    <span class="ml-3 text-xl">Code Crafters Guild</span>
+                </a>
+                <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
+      <a class="mr-5 hover:text-gray-900">Home</a>
+      <a class="mr-5 hover:text-gray-900">Projects</a>
+      <a class="mr-5 hover:text-gray-900">About</a>
+      <a class="mr-5 hover:text-gray-900">Contact Us</a>
+    </nav>
+    <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Join Us
+      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+          <path d="M5 12h14M12 5l7 7-7 7"></path>
+        </svg>
+    </button>
+  </div>
+</header>
+</div>
+
 </body>
 </html>
